<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/taskFragment"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:title="@string/task"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/galleryFragment"
        android:enabled="true"
        android:icon="@drawable/ic_gallery"
        android:title="@string/gallery"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/accountFragment"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/account"
        app:showAsAction="ifRoom" />
</menu>