<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="70dp"
        android:paddingHorizontal="20dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_top"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/guide_line_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <TextView
            android:id="@+id/tv_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/guide_line_2"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_see_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/tv_todo"
            app:layout_constraintBottom_toBottomOf="@id/tv_todo"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_todo"
            tools:itemCount="3"
            tools:listitem="@layout/item_task"/>

        <TextView
            android:id="@+id/tv_in_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_progress"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/rv_todo"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_see_in_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/tv_in_progress"
            app:layout_constraintBottom_toBottomOf="@id/tv_in_progress"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_in_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_in_progress"
            tools:itemCount="3"
            tools:listitem="@layout/item_task"/>

        <TextView
            android:id="@+id/tv_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/rv_in_progress"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_see_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/tv_done"
            app:layout_constraintBottom_toBottomOf="@id/tv_done"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_done"
            tools:itemCount="3"
            tools:listitem="@layout/item_task"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>